[package]
name = "wasm-canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'DomRect',
    'Event',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'WebGlRenderingContext',
    "WebGl2RenderingContext",
    "WebGlVertexArrayObject",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    'Window',
    'console'
]
